<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>risbot2</name>
  <version>1.0.1</version>
  <description>
    ROS 2 packages for risbot2
  </description>
  <maintainer email="thangtranhoang2003@gmail.com">Thang Hoang</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>risbot2_bringup</exec_depend>
  <exec_depend>risbot2_cartographer</exec_depend>
  <exec_depend>risbot2_description</exec_depend>
  <exec_depend>risbot2_example</exec_depend>
  <exec_depend>risbot2_navigation2</exec_depend>
  <exec_depend>risbot2_node</exec_depend>
  <exec_depend>risbot2_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
