<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>risbot2_teleop</name>
  <version>1.0.1</version>
  <description>
    Teleoperation node using keyboard for RISbot2.
  </description>
  <maintainer email="thangtranhoang2003@gmail.com">Thang Hoang</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
